Getting crdschema and k8sgen to a working state

--- a/crdschema/BUILD.bazel
+++ b/crdschema/BUILD.bazel
@@ -6,7 +6,7 @@ toolchain_type(
 )
 
 crdschema_toolchain(
-    name = "default_toolchain",
+    name = "go_toolchain",
     cli = "//crdschema/cmd/schema",
     visibility = ["//visibility:public"],
 )
