--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -5,13 +5,14 @@ module(
 
 bazel_dep(name = "rules_go", version = "0.51.0")
 bazel_dep(name = "rules_jsonnet", version = "0.6.0")
-
+bazel_dep(name = "platforms", version = "0.0.10")
 bazel_dep(name = "gazelle", version = "0.40.0")
 
 #==============================================================================
 # Go Lang dependencies
 #==============================================================================
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
+
 # go_deps.gazelle_override(
 #     directives = [
 #         "gazelle:go_naming_convention import_alias",
@@ -36,7 +37,7 @@ go_deps.from_file(go_mod = "//:go.mod")
 use_repo(
     go_deps,
     "com_github_alecthomas_kong",
+    "com_github_jsonnet_libs_k8s",
     "in_gopkg_yaml_v3",
     "org_golang_x_sync",
-    "com_github_jsonnet_libs_k8s",
 )
